update script. add column name to form

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
         <label for="file">Upload CSV File:</label>
         <input type="file" name="file" accept=".csv" required>
         <br>
+        <input required type="text" name="column_name">
+        <br>
         <button type="submit">Convert Ratings</button>
     </form>
 </body>
