--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>CSV Ratings Conversion</h1>
 
-    <form action="http://oglearns.pythonanywhere.com/convert_ratings" method="post" enctype="multipart/form-data">
+    <form action="https://oglearns.pythonanywhere.com/convert_ratings" method="post" enctype="multipart/form-data">
         <br>
         <br>
         <label for="file">Upload CSV File:</label>
